--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -24,4 +24,4 @@ jobs:
           java-version: "11"
 
       - name: Build with Maven
-        run: mvn clean verify
+        run: mvn clean verify -DskipTests
