feat(db): add PostgreSQL connection with JDBC configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 server.port=8080
 spring.application.name=spring-user-banking
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# HikariCP Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=BankingPool
