--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=BankingPool
+
+# Secret data - just for example
+jwt.secret=your-256-bit-secret-change-this-to-something-secure
+jwt.expiration=86400000
