--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
       SPRING_REDIS_HOST: redis
 
   postgres:
-    image: postgres:13-alpine
+    image: postgres:17.4-alpine3.21
     environment:
       POSTGRES_DB: mydb
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
   redis:
-    image: redis:6-alpine
+    image: redis:7.4-alpine
     ports:
       - "6379:6379"
 
