--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.datasource.hikari.pool-name=BankingPool
 # Secret data - just for example
 jwt.secret=your-256-bit-secret-change-this-to-something-secure
 jwt.expiration=86400000
+
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
