--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ jwt.expiration=86400000
 # Redis
 spring.redis.host=localhost
 spring.redis.port=6379
+
+#FlyWay
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=public
+spring.flyway.default-schema=public
+spring.flyway.create-schemas=true
